kubernetes/tdarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tdarr
  labels:
    goldilocks.fairwinds.com/enabled: "true"
